--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
-    "lint": "expo lint"
+    "lint": "expo lint",
+    "dev": "APP_VARIANT=development npx expo start"
   },
   "jest": {
     "preset": "jest-expo"
@@ -24,6 +25,7 @@
     "@react-navigation/bottom-tabs": "^7.0.0",
     "@react-navigation/native": "^7.0.0",
     "@reduxjs/toolkit": "^2.5.0",
+    "axios": "^1.7.9",
     "expo": "~52.0.20",
     "expo-auth-session": "~6.0.1",
     "expo-blur": "~14.0.1",
@@ -31,8 +33,10 @@
     "expo-checkbox": "~4.0.0",
     "expo-constants": "~17.0.3",
     "expo-dev-client": "~5.0.6",
+    "expo-device": "~7.0.2",
     "expo-font": "~13.0.2",
     "expo-haptics": "~14.0.0",
+    "expo-image-picker": "~16.0.3",
     "expo-linking": "~7.0.3",
     "expo-router": "~4.0.14",
     "expo-splash-screen": "~0.29.18",
@@ -50,11 +54,13 @@
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
+    "react-native-video": "^6.9.1",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
     "react-redux": "^9.2.0",
     "undefined": "expo-auth-session/providers/google",
-    "expo-image-picker": "~16.0.3"
+    "expo-file-system": "~18.0.7",
+    "@react-native-picker/picker": "2.9.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
