--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,5 @@ app-example
 services/google-services.json
 services/GoogleService-Info.plist
 services/web-firebase-sdk.txt
+
+react-native-eas-publishing-234579b3907f.json
